--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
-  <title>Spaghetti Bolognese Rezept</title>
+  <title>Egg Drop Sandwich Rezept</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <h1>Egg Drop Sandwich</h1>
