add table of contents

--- a/index.html
+++ b/index.html
@@ -7,3 +7,17 @@
 </head>
 <body>
   <h1>Egg Drop Sandwich</h1>
+
+  <p>Das Egg Drop Sandwich ist ein trendiges Frühstück aus Korea – super fluffig, herzhaft und in wenigen Minuten gemacht. Perfekt für einen genussvollen Start in den Tag!</p>
+
+  <nav>
+    <h2>Inhaltsverzeichnis</h2>
+    <ul>
+      <li><a href="#infos">Angaben</a></li>
+      <li><a href="#zutaten">Zutaten</a></li>
+      <li><a href="#zubereitung">Zubereitung</a></li>
+      <li><a href="#bilder">Bilder</a></li>
+      <li><a href="#links">Ähnliche Rezepte</a></li>
+    </ul>
+  </nav>
+
