--- a/index.html
+++ b/index.html
@@ -20,4 +20,43 @@
       <li><a href="#links">Ähnliche Rezepte</a></li>
     </ul>
   </nav>
+  
+  <h2 id="infos">Angaben</h2>
+  <ul>
+    <li>Zubereitungszeit: ca. 25 Minuten</li>
+    <li>Personenzahl: 2</li>
+  </ul>
 
+  <h2 id="zutaten">Zutaten</h2>
+  <table>
+    <tr><th>Menge</th><th>Zutat</th></tr>
+    <tr><td>4</td><td>Toastbrotscheiben</td></tr>
+    <tr><td>3</td><td>Eier</td></tr>
+    <tr><td>2 EL</td><td>Milch</td></tr>
+    <tr><td>2 EL</td><td>Butter</td></tr>
+    <tr><td>2 Scheiben</td><td>Käse (nach Wahl, z. B. Emmentaler)</td></tr>
+    <tr><td>2 Scheiben</td><td>gekochter Schinken oder Speck</td></tr>
+    <tr><td>etwas</td><td>Schnittlauch, Salz, Pfeffer</td></tr>
+  </table>
+
+  <h2 id="zubereitung">Zubereitung</h2>
+  <ol>
+    <li>Eier mit Milch, Salz und Pfeffer verquirlen.</li>
+    <li>Butter in einer Pfanne schmelzen, Eier bei niedriger Hitze langsam stocken lassen und ständig rühren.</li>
+    <li>Toastbrot toasten und leicht buttern.</li>
+    <li>Käse und Schinken/Speck auf zwei Toastscheiben legen.</li>
+    <li>Rührei gleichmäßig darauf verteilen.</li>
+    <li>Mit Schnittlauch bestreuen, zweite Toastscheibe oben drauf legen – fertig!</li>
+  </ol>
+
+  <h2 id="bilder">Bilder</h2>
+  <img src="images/egg-drop-sandwich.jpg" alt="Egg Drop Sandwich" width="400">
+
+  <h2 id="links">Ähnliche Rezepte</h2>
+  <ul>
+    <li><a href="https://www.swissmilk.ch/de/rezepte-kochideen/rezepte/LM201212_31_KUG/omelett-mit-kaese/" target="_blank">Omelett mit Käse</a></li>
+    <li><a href="https://www.swissmilk.ch/de/rezepte-kochideen/rezepte/LM200412_53_BAN/croque-monsieur/" target="_blank">Croque Monsieur</a></li>
+  </ul>
+
+</body>
+</html>
