--- a/index.html
+++ b/index.html
@@ -2,61 +2,82 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
-  <title>Egg Drop Sandwich Rezept</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Ein einfaches und fluffiges Rezept für ein koreanisches Egg Drop Sandwich, perfekt für ein schnelles Frühstück.">
+  <meta name="keywords" content="Egg Drop Sandwich, Rezept, Frühstück, koreanisch, einfach">
+  <meta name="author" content="Dein Name">
+  <meta property="og:title" content="Egg Drop Sandwich Rezept">
+  <meta property="og:description" content="Leckere koreanische Frühstückssandwiches in 25 Minuten zubereitet.">
+  <meta property="og:image" content="bilder/egg-drop-sandwich.jpg">
+  <meta property="og:type" content="website">
+  <title>Egg Drop Sandwich - Rezept</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Egg Drop Sandwich</h1>
+  <header>
+    <h1>Egg Drop Sandwich</h1>
+    <p>Ein fluffiges koreanisches Frühstück für den perfekten Start in den Tag!</p>
+  </header>
 
-  <p>Das Egg Drop Sandwich ist ein trendiges Frühstück aus Korea – super fluffig, herzhaft und in wenigen Minuten gemacht. Perfekt für einen genussvollen Start in den Tag!</p>
+  <main>
+    <nav>
+      <h2>Inhaltsverzeichnis</h2>
+      <ul>
+        <li><a href="#infos" aria-label="Zu Angaben">Angaben</a></li>
+        <li><a href="#zutaten" aria-label="Zu Zutaten">Zutaten</a></li>
+        <li><a href="#zubereitung" aria-label="Zu Zubereitung">Zubereitung</a></li>
+        <li><a href="#bilder" aria-label="Zu Bilder">Bilder</a></li>
+        <li><a href="#links" aria-label="Zu ähnlichen Rezepten">Ähnliche Rezepte</a></li>
+      </ul>
+    </nav>
 
-  <nav>
-    <h2>Inhaltsverzeichnis</h2>
-    <ul>
-      <li><a href="#infos">Angaben</a></li>
-      <li><a href="#zutaten">Zutaten</a></li>
-      <li><a href="#zubereitung">Zubereitung</a></li>
-      <li><a href="#bilder">Bilder</a></li>
-      <li><a href="#links">Ähnliche Rezepte</a></li>
-    </ul>
-  </nav>
+    <section id="infos" aria-labelledby="infos-heading">
+      <h2 id="infos-heading">Angaben</h2>
+      <ul>
+        <li>Zubereitungszeit: ca. 25 Minuten</li>
+        <li>Personenzahl: 2</li>
+      </ul>
+    </section>
 
-  <h2 id="infos">Angaben</h2>
-  <ul>
-    <li>Zubereitungszeit: ca. 25 Minuten</li>
-    <li>Personenzahl: 2</li>
-  </ul>
+    <section id="zutaten" aria-labelledby="zutaten-heading">
+      <h2 id="zutaten-heading">Zutaten</h2>
+      <label for="personen">Personenzahl: </label>
+      <input type="number" id="personen" value="2" min="1" max="10">
+      <table id="zutaten-tabelle">
+        <thead>
+          <tr>
+            <th>Menge</th>
+            <th>Zutat</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr><td>4</td><td>Toastbrotscheiben</td></tr>
+          <tr><td>3</td><td>Eier</td></tr>
+          <tr><td>2</td><td>Milch (EL)</td></tr>
+          <tr><td>2</td><td>Butter (EL)</td></tr>
+          <tr><td>2</td><td>Käse (Scheiben, z. B. Emmentaler)</td></tr>
+          <tr><td>2</td><td>gekochter Schinken oder Speck (Scheiben)</td></tr>
+          <tr><td>etwas</td><td>Schnittlauch, Salz, Pfeffer</td></tr>
+        </tbody>
+      </table>
+    </section>
 
-  <h2 id="zutaten">Zutaten</h2>
-  <table>
-    <tr><th>Menge</th><th>Zutat</th></tr>
-    <tr><td>4</td><td>Toastbrotscheiben</td></tr>
-    <tr><td>3</td><td>Eier</td></tr>
-    <tr><td>2 EL</td><td>Milch</td></tr>
-    <tr><td>2 EL</td><td>Butter</td></tr>
-    <tr><td>2 Scheiben</td><td>Käse (nach Wahl, z. B. Emmentaler)</td></tr>
-    <tr><td>2 Scheiben</td><td>gekochter Schinken oder Speck</td></tr>
-    <tr><td>etwas</td><td>Schnittlauch, Salz, Pfeffer</td></tr>
-  </table>
+    <section id="zubereitung" aria-labelledby="zubereitung-heading">
+      <h2 id="zubereitung-heading">Zubereitung</h2>
+      <article>
+        <ol>
+          <li>Eier mit Milch, Salz und Pfeffer verquirlen.</li>
+          <li>Butter in einer Pfanne schmelzen, Eier bei niedriger Hitze langsam stocken lassen und ständig rühren.</li>
+          <li>Toastbrot toasten und leicht buttern.</li>
+          <li>Käse und Schinken/Speck auf zwei Toastscheiben legen.</li>
+          <li>Rührei gleichmäßig darauf verteilen.</li>
+          <li>Mit Schnittlauch bestreuen, zweite Toastscheibe oben drauf legen – fertig!</li>
+        </ol>
+      </article>
+    </section>
 
-  <h2 id="zubereitung">Zubereitung</h2>
-  <ol>
-    <li>Eier mit Milch, Salz und Pfeffer verquirlen.</li>
-    <li>Butter in einer Pfanne schmelzen, Eier bei niedriger Hitze langsam stocken lassen und ständig rühren.</li>
-    <li>Toastbrot toasten und leicht buttern.</li>
-    <li>Käse und Schinken/Speck auf zwei Toastscheiben legen.</li>
-    <li>Rührei gleichmäßig darauf verteilen.</li>
-    <li>Mit Schnittlauch bestreuen, zweite Toastscheibe oben drauf legen – fertig!</li>
-  </ol>
-
-  <h2 id="bilder">Bilder</h2>
-  <img src="bilder/egg-drop-sandwich.jpg" alt="Egg Drop Sandwich" width="400">
-
-  <h2 id="links">Ähnliche Rezepte</h2>
-  <ul>
-    <li><a href="https://www.swissmilk.ch/de/rezepte-kochideen/rezepte/LM201212_31_KUG/omelett-mit-kaese/" target="_blank">Omelett mit Käse</a></li>
-    <li><a href="https://www.swissmilk.ch/de/rezepte-kochideen/rezepte/LM200412_53_BAN/croque-monsieur/" target="_blank">Croque Monsieur</a></li>
-  </ul>
-
-</body>
-</html>
+    <section id="bilder" aria-labelledby="bilder-heading">
+      <h2 id="bilder-heading">Bilder</h2>
+      <img src="bilder/egg-drop-sandwich.jpg" alt="Ein frisch zubereitetes Egg Drop Sandwich mit fluffigem Rühreiern und Schinken auf getoastetem Brot">
+    </section>
