--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <header>
     <h1>Egg Drop Sandwich</h1>
     <p>Ein fluffiges koreanisches Frühstück für den perfekten Start in den Tag!</p>
+    <button id="dark-mode-toggle" aria-label="Dark Mode umschalten">🌙 Dark Mode</button>
   </header>
 
   <main>
@@ -81,3 +82,50 @@
       <h2 id="bilder-heading">Bilder</h2>
       <img src="bilder/egg-drop-sandwich.jpg" alt="Ein frisch zubereitetes Egg Drop Sandwich mit fluffigem Rühreiern und Schinken auf getoastetem Brot">
     </section>
+
+    <section id="links" aria-labelledby="links-heading">
+      <h2 id="links-heading">Ähnliche Rezepte</h2>
+      <ul>
+        <li><a href="https://www.swissmilk.ch/de/rezepte-kochideen/rezepte/LM200910_53/omeletten-mit-schinken-und-kaese/" target="_blank">Omelett mit Schinken und Käse 🥟</a></li>
+        <li><a href="https://www.swissmilk.ch/de/rezepte-kochideen/rezepte/CHDO201612_32/croque-monsieur/" target="_blank">Croque Monsieur 🥪</a></li>
+      </ul>
+    </section>
+  </main>
+
+  <footer>
+    <p>© 2025 Egg Drop Sandwich Rezept</p>
+  </footer>
+
+  <script>
+    const personenInput = document.getElementById('personen');
+    const tabelle = document.getElementById('zutaten-tabelle');
+    const mengen = [4, 3, 2, 2, 2, 2, 'etwas']; // Basis-Mengen für 2 Personen
+
+    personenInput.addEventListener('input', () => {
+      const personen = parseInt(personenInput.value) || 2;
+      const rows = tabelle.querySelectorAll('tbody tr');
+      rows.forEach((row, index) => {
+        if (index < mengen.length - 1) { // "etwas" nicht skalieren
+          const neueMenge = (mengen[index] / 2 * personen).toFixed(1);
+          row.cells[0].textContent = neueMenge;
+        }
+      });
+    });
+
+    document.querySelectorAll('nav a').forEach(anchor => {
+      anchor.addEventListener('click', function(e) {
+        e.preventDefault();
+        const target = document.querySelector(this.getAttribute('href'));
+        target.scrollIntoView({ behavior: 'smooth', block: 'start' });
+      });
+    });
+
+    // Dark Mode Toggle
+    const toggleButton = document.getElementById('dark-mode-toggle');
+    toggleButton.addEventListener('click', () => {
+      document.body.classList.toggle('dark-mode');
+      toggleButton.textContent = document.body.classList.contains('dark-mode') ? '🌞 Day' : '🌑 Night';
+    });
+  </script>
+</body>
+</html>
